feat: capabilities endpoint (#2)
* feat: added schema endpoints

* feat: implemented schema endpoints

* feat: implemented capabilities endpoint

* test: added integration test

* fix: changed import to point to new types file

* fix: removed unused import
